--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^1.5.6",
+    "flowbite-svelte-icons": "^2.2.0",
     "svelte": "^5.28.1",
+    "tailwindcss": "^4.1.8",
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.8",
-    "tailwindcss": "^4.1.8"
+    "@tailwindcss/cli": "^4.1.8"
   }
 }
